--- a/photo/src/pug/pages/photo.pug
+++ b/photo/src/pug/pages/photo.pug
@@ -85,12 +85,5 @@ block content
   section.video 
     .video-intro.heading-text
       h1.video-title.heading Все еще сомневаетесь?
-      .video-text.text Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
-    picture.video-picture
-      source(media="(min-width: 1200px)", srcset="assets/img/video-desktop@1x.webp, assets/img/video-desktop@2x.webp 2x", type="image/webp", alt="Презентация", loading="lazy")
-      source(media="(min-width: 1200px)", srcset="assets/img/video-desktop@1x.jpg, assets/img/video-desktop@2x.jpg 2x", type="image/jpeg", alt="Презентация", loading="lazy")
-      source(media="(min-width: 768px)", srcset="assets/img/video-tablet@1x.webp, assets/img/video-tablet@2x.webp 2x", type="image/webp", alt="Презентация", loading="lazy")
-      source(media="(min-width: 768px)", srcset="assets/img/video-tablet@1x.jpg, assets/img/video-tablet@2x.jpg 2x", type="image/jpeg", alt="Презентация", loading="lazy")
-      source(media="(max-width: 768px)", srcset="assets/img/video-mobile@1x.webp, assets/img/video-mobile@2x.webp 2x", type="image/webp", alt="Презентация", loading="lazy")
-      source(media="(max-width: 768px)", srcset="assets/img/video-mobile@1x.jpg, assets/img/video-mobile@2x.jpg 2x", type="image/jpeg", alt="Презентация", loading="lazy")
-      img.video-picture(src="assets/img/video-desktop@1x.jpg", alt="Презентация", loading="lazy")
+      .video-text.text Смотрите видео и скорее за билетами, пока они не подорожали в очередной раз!
+    <iframe class="video-video" src="https://www.youtube-nocookie.com/embed/_qHjLngt7OI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
