sixth commit with fix

--- a/photo/src/assets/scss/modules/photo.scss
+++ b/photo/src/assets/scss/modules/photo.scss
@@ -197,6 +197,9 @@
         left: 0;
         bottom: 0;
     }
+    .subtitle__author {
+        color: white;
+    }
     .subtitle__icon {
         bottom: 10px;
         left: 50px;
