update pug and js

--- a/src/templates/pages/form.pug
+++ b/src/templates/pages/form.pug
@@ -3,7 +3,7 @@ extends ../layouts/main
 block variables
   - var title = 'Седона';
   - var description = 'Седона — небольшой городок в Аризоне, заслуживающий большего!';
-  - var nav__form = true
+  - var page = 'form'
 
 block content
   section.intro
