--- a/src/templates/pages/photo.pug
+++ b/src/templates/pages/photo.pug
@@ -3,7 +3,7 @@ extends ../layouts/main
 block variables
   - var title = 'Седона';
   - var description = 'Седона — небольшой городок в Аризоне, заслуживающий большего!';
-  - var nav__photo = true
+  - var page = 'photo'
 
 block content
   section.intro
